@@ -20,7 +20,7 @@
  </simpara></listitem></varlistentry>
  <varlistentry><term><literal role="sexp">(BDB:ENV-CLOSE dbe)</literal></term>
   <listitem><simpara>Close an environment (&DBE_close;).
- </simpara></listitem></varlistentry>
+    You can also call &close;.</simpara></listitem></varlistentry>
  <varlistentry><term><literal role="sexp">(BDB:DBREMOVE dbe file
     database &key-amp; :TRANSACTION :AUTO-COMMIT)</literal></term>
   <listitem><simpara>Remove a database (&DBE_dbremove;).
@@ -54,9 +54,45 @@
  <listitem><simpara>Set some environment options using &DBE_set_flags;,
    &DBE_set_verbose;, &DBE_set_tmp_dir; and &DBE_set_data_dir;.
 </simpara></listitem></varlistentry>
+<varlistentry><term><literal role="sexp">(BDB:ENV-GET-OPTIONS dbe
+   &optional-amp; what)</literal></term>
+ <listitem><para>Retrieve some environment options.
+   <variablelist><title>Values of <replaceable>what</replaceable></title>
+    <varlistentry><term>missing</term><term>&nil;</term>
+     <listitem><simpara>all options as multiple values
+    </simpara></listitem></varlistentry>
+    <varlistentry><term><constant>:DATA-DIR</constant></term>
+     <listitem><simpara>list of data directories
+    </simpara></listitem></varlistentry>
+    <varlistentry><term><constant>:TMP-DIR</constant></term>
+     <listitem><simpara>temporary directory (may be &nil;)
+    </simpara></listitem></varlistentry>
+    <varlistentry><term>&verbose-k;</term>
+     <listitem><simpara>return the list of verbosity settings
+    </simpara></listitem></varlistentry>
+    <varlistentry><term><constant>:AUTO-COMMIT</constant></term>
+     <term><constant>:CDB-ALLDB</constant></term>
+     <term><constant>:DIRECT-DB</constant></term>
+     <term><constant>:DIRECT-LOG</constant></term>
+     <term><constant>:NOLOCKING</constant></term>
+     <term><constant>:NOMMAP</constant></term>
+     <term><constant>:NOPANIC</constant></term>
+     <term><constant>:OVERWRITE</constant></term>
+     <term><constant>:PANIC-ENVIRONMENT</constant></term>
+     <term><constant>:REGION-INIT</constant></term>
+     <term><constant>:TXN-NOSYNC</constant></term>
+     <term><constant>:TXN-WRITE-NOSYNC</constant></term>
+     <term><constant>:YIELDCPU</constant></term>
+     <term><constant>:VERB-CHKPOINT</constant></term>
+     <term><constant>:VERB-DEADLOCK</constant></term>
+     <term><constant>:VERB-RECOVERY</constant></term>
+     <term><constant>:VERB-REPLICATION</constant></term>
+     <term><constant>:VERB-WAITSFOR</constant></term>
+     <listitem><simpara>return a &boolean-t; indicator of whether this
+       option is set or not</simpara></listitem></varlistentry>
+</variablelist></para></listitem></varlistentry>
 </variablelist>
 </section>
-
 
 <section id="bdb-operations"><title>Database Operations</title>
 
@@ -73,10 +109,10 @@
    :XA)</literal></term>
  <listitem><simpara>Create a database handle (&db_create;).
 </simpara></listitem></varlistentry>
-<varlistentry><term><literal role="sexp">(BDB:DB-CLOSE dbe &key-amp;
+<varlistentry><term><literal role="sexp">(BDB:DB-CLOSE db &key-amp;
    :NOSYNC)</literal></term>
  <listitem><simpara>Close a database (&DB_close;).
-</simpara></listitem></varlistentry>
+   You can also call &close;.</simpara></listitem></varlistentry>
 <varlistentry><term><literal role="sexp">(BDB:DB-DEL dbe key &key-amp;
    :TRANSACTION :AUTO-COMMIT)</literal></term>
  <listitem><simpara>Delete items from a database (&DB_del;).
@@ -184,18 +220,36 @@
 
 
 <section id="bdb-cursor"><title>Database Cursor Operations</title>
- <!--
- DB->cursor	Create a cursor handle
- DBcursor->c_close	Close a cursor
- DBcursor->c_count	Return count of duplicates
- DBcursor->c_del	Delete by cursor
- DBcursor->c_dup	Duplicate a cursor
- DBcursor->c_get, DBcursor->c_pget	Retrieve by cursor
- DBcursor->c_put	Store by cursor
- -->
+
 <variablelist>
-<varlistentry><term><literal role="sexp">()</literal></term>
- <listitem><simpara></simpara></listitem></varlistentry>
+<varlistentry><term><literal role="sexp">(BDB:MAKE-CURSOR db &key-amp;
+   :DIRTY_READ :WRITECURSOR :TRANSACTION)</literal></term>
+ <listitem><simpara>Create a cursor handle (&DB_cursor;).
+</simpara></listitem></varlistentry>
+<varlistentry><term><literal role="sexp">(BDB:CURSOR-CLOSE
+   cursor)</literal></term>
+ <listitem><simpara>Close the cursor handle (&DBC_close;).
+   You can also call &close;.</simpara></listitem></varlistentry>
+<varlistentry><term><literal role="sexp">(BDB:CURSOR-COUNT
+   cursor)</literal></term>
+ <listitem><simpara>Return count of duplicates (&DBC_count;).
+</simpara></listitem></varlistentry>
+<varlistentry><term><literal role="sexp">(BDB:CURSOR-DEL
+   cursor)</literal></term>
+ <listitem><simpara>Delete by cursor (&DBC_del;).
+</simpara></listitem></varlistentry>
+<varlistentry><term><literal role="sexp">(BDB:CURSOR-DUP
+   cursor &key-amp; :POSITION)</literal></term>
+ <listitem><simpara>Duplicate a cursor (&DBC_dup;).
+</simpara></listitem></varlistentry>
+<varlistentry><term><literal role="sexp">(BDB:CURSOR-GET
+   cursor key data flag)</literal></term>
+ <listitem><simpara>Retrieve by cursor (&DBC_get;).
+</simpara></listitem></varlistentry>
+<varlistentry><term><literal role="sexp">(BDB:CURSOR-PUT
+   cursor key data flag)</literal></term>
+ <listitem><simpara>Store by cursor (&DBC_put;).
+</simpara></listitem></varlistentry>
 </variablelist>
 </section>
 
